<resources>
    <string name="app_name">Milioner</string>
    <string name="milioner_become_millionaire">Milioner - Become Millionaire</string>
    <string name="login">Login</string>
    <string name="get_activation_code">Get Activation Code</string>
    <string name="eg_0912">eg: 647*******</string>
    <string name="network_error">Network_Error</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="wrong_number">Wrong Number?</string>
    <string name="activation_code">Activation Code</string>
    <string name="please_enter_activation_code_sent_to_989121233256">Please Enter Activation Code Sent to 989121233256</string>
    <string name="confirm_activation_code">Confirm Activation Code</string>
    <string name="milioner_farsi">میلیونر</string>
    <string name="milioner_english">Milioner</string>
    <string name="your_balance">موجودی شما</string>
    <string name="toman">تومان</string>
    <string name="show_ads">مشاهده تبلیغ</string>
    <string name="vpn_hint">برای مشاهده تبلیغ حتما باید به VPN متصل باشید</string>
    <string name="charge_sim_balance">خرید شارژ موبایل</string>
    <string name="charge_hint">با هر بار درخواست مقدار 1000 تومان از مبلغ موجودی شما کم و به ازای آن خط شما شارژ می‌گردد</string>
    <string name="resend">Resend</string>


    <!-- Confirmation dialog-->
    <string name="reset">Reset</string>
    <string name="continue_game">Cancel</string>
    <string name="reset_dialog_title">Reset game?</string>
    <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>

    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="maxtile">MAX TILE</string>
    <string name="timeText">ELAPSED TIME</string>
    <string name="instructions">Join the numbers and get to the 2048 tile!</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="paused">Paused!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now…</string>
    <string name="endless">"Endless" Mode</string>
    <string name="target_phone_number">شماره تلفن مقصد</string>
    <string name="play_game_hint">اگه حوصلت سر رفته بازی کن</string>
    <string name="play_game">بازی کن</string>
</resources>
