<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".View.LoginFragment"
    tools:layout_height="300dp">

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/please_enter_your_phone_number"
        android:textColor="#9A9A9A"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_confirm"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_disabled_bkg"
        android:enabled="false"
        android:text="@string/get_activation_code"
        android:textAllCaps="false"
        android:textColor="#A6A6A6"
        android:textSize="16sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_bkg"
        android:ems="10"
        android:hint="@string/eg_0912"
        android:inputType="phone"
        android:lines="1"
        android:longClickable="false"
        android:maxLength="10"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_weight="2.5"
        app:layout_constraintStart_toEndOf="@id/cc"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/cc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bkg"
        app:layout_constraintBottom_toBottomOf="@id/et_code"
        app:layout_constraintEnd_toStartOf="@id/et_code"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toTopOf="@id/et_code">

        <TextView
            android:id="@+id/countryCodeHolder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:lines="1"
            android:longClickable="false"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="+1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/error_bkg"
        android:ems="10"
        android:gravity="center|start"
        android:lines="1"
        android:padding="10dp"
        android:text="@string/network_error"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/et_code"
        app:layout_constraintEnd_toEndOf="@+id/et_code"
        app:layout_constraintStart_toStartOf="@+id/et_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:elevation="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Country"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cc"
        app:layout_constraintEnd_toEndOf="@+id/cc"
        app:layout_constraintStart_toStartOf="@+id/cc" />


</androidx.constraintlayout.widget.ConstraintLayout>
